--- a/index.html
+++ b/index.html
@@ -157,17 +157,17 @@
                 <h2 id="theses">Theses</h2>
                 <ul>
                         <li>
-                     Side-Channel and Fault Attacks in Modern Lattice-Based Cryptography. <i>Supervisor: Gabi Dreo.</i>
+                     Side-Channel and Fault Attacks in Modern Lattice-Based Cryptography. <i>Supervisor: Prof. Dr. Gabi Dreo.</i>
 </li>
                 </ul>
                 <ul>
                         <li>
-                     Identifying Frobenius elements and calculating Galois Gauss sums. <i>Supervisor: Werner Bley.</i>
+                     Identifying Frobenius elements and calculating Galois Gauss sums. <i>Supervisor: Prof. Dr. Werner Bley.</i>
 </li>
                 </ul>
                 <ul>
                         <li>
-                        Klassifikation Quadratischer Formen über den rationalen Zahlen. <i>Supervisor: Andreas Rosenschon.</i>
+                        Klassifikation Quadratischer Formen über den rationalen Zahlen. <i>Supervisor: Prof. Dr. Andreas Rosenschon.</i>
 </li>
             </div>
 
