--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
@@ -73,7 +72,7 @@
 
             <!-- Contact Info on the Sidebar -->
             <div class="col-md-4">
-                <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Julius Hermelink</b></div><br>
+                <div style="sans-serif; font-size: 32px;"><b>Julius Hermelink</b></div><br>
                 <p><b>julius.hermelink@mpi-sp.org</b><br>
                 Max-Planck-Institute for Security and Privacy<br>
                 Universitätsstraße 140<br>
