--- a/index.html
+++ b/index.html
@@ -15,33 +15,6 @@
 </head>
 <body>
 
-<style type="text/css">
-  @font-face {
-    font-family: "Computer Modern";
-    src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunss.otf');
-  }
-  @font-face {
-    font-family: "Computer Modern";
-    src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunsx.otf');
-    font-weight: bold;
-  }
-  @font-face {
-    font-family: "Computer Modern";
-    src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunsi.otf');
-    font-style: italic, oblique;
-  }
-  @font-face {
-    font-family: "Computer Modern";
-    src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunbxo.otf');
-    font-weight: bold;
-    font-style: italic, oblique;
-  }
-
-  body {
-    font-family: "Computer Modern", sans-serif;
-  }
-</style>
-
 <!-- Navigation -->
 	<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
 	  <div class="container">
@@ -74,7 +47,7 @@
         <div class="row">
 
             <!-- Entries Column -->
-            <div class="col-md-8">
+            <div class="col-md-8 order-0">
                 
                 <!-- Main Image -->
                 <img class="img-responsive" src="photo.jpg" style="width: 100vw" alt=""><br>
@@ -96,7 +69,7 @@
             </div> 
 
             <!-- Contact Info on the Sidebar -->
-            <div class="col-md-4">
+            <div class="col-md-4 order-1">
                 <div style="sans-serif; font-size: 32px;"><b>Julius Hermelink</b></div><br>
                 <p><b>julius.hermelink@mpi-sp.org</b><br>
                 Max-Planck-Institute for Security and Privacy<br>
