--- a/index.html
+++ b/index.html
@@ -56,6 +56,21 @@
 
             <div class="col-md-8">
                 <img class="img-fluid" src="photo.jpg" style="width: 100vw; margin-top:3%" alt=""><br>
+            </div>
+
+            <div class="col-md-4" style="margin-top: 1.5%">
+                <div style="sans-serif; font-size: 32px;"><b>Julius Hermelink</b></div><br>
+                <p><b>julius.hermelink@mpi-sp.org</b><br>
+                Max-Planck-Institute for Security and Privacy<br>
+                Universitätsstraße 140<br>
+                44799 Bochum (Germany)
+                </p>
+              <dd><a href="https://scholar.google.com/citations?user=fTQB48cAAAAJ">Google Scholar</a></dd> 
+              <dd><a href="https://dblp.org/pid/298/9320.html?view=by-year">DBLP</a></dd>
+              <dd><a href="https://de.linkedin.com/in/julius-hermelink-4a91a2156">LinkedIn</a></dd>
+            </div>
+
+            <div class="col-md-8">
 
                 <div style="margin-top:3%; text-align:justify;">                
                     <p>I'm a postdoc in the cryptographic engineering group led by Peter Schwabe at MPI-SP.
@@ -73,17 +88,6 @@
                 </div>
             </div> 
 
-            <div class="col-md-4" style="margin-top: 1.5%">
-                <div style="sans-serif; font-size: 32px;"><b>Julius Hermelink</b></div><br>
-                <p><b>julius.hermelink@mpi-sp.org</b><br>
-                Max-Planck-Institute for Security and Privacy<br>
-                Universitätsstraße 140<br>
-                44799 Bochum (Germany)
-                </p>
-              <dd><a href="https://scholar.google.com/citations?user=fTQB48cAAAAJ">Google Scholar</a></dd> 
-              <dd><a href="https://dblp.org/pid/298/9320.html?view=by-year">DBLP</a></dd>
-              <dd><a href="https://de.linkedin.com/in/julius-hermelink-4a91a2156">LinkedIn</a></dd>
-            </div>
             
             <!-- Publications -->
             <div class="col-md-8" style="margin-top: 3%">    
