--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                 </div>
             </div> 
 
-            <div class="col-md-4" style="margin-top: 1.5%">
+            <div class="col-md-4" style="margin-top: 2%">
                 <div class="col-md-8">
-                <div style="sans-serif; font-size: 32px;"><b>Julius Hermelink</b></div><br>
+                <h2>Julius Hermelink</b></h2><br>
                 <p><b>julius.hermelink@mpi-sp.org</b><br>
                 Max-Planck-Institute for Security and Privacy<br>
                 Universitätsstraße 140<br>
