--- a/index.html
+++ b/index.html
@@ -15,19 +15,12 @@
 </head>
 <body>
 
-<!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-inverse bg-dark navbar-dark" style="width: 100 vw">
 <div class="container">
-  <!-- Brand -->
-  <!-- <a class="navbar-brand" href="#">Julius Hermelink</a> -->
-
-  <!-- Toggler/collapsibe Button -->
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <!-- Navbar links -->
-<div class="collapse navbar-collapse" id="collapsibleNavbar">
+</button>
+<div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
         <li class="nav-item-active">
             <a class="nav-link" href="#">Home</a>
@@ -49,7 +42,6 @@
 </div>
 </nav>
 
-  <!-- Page Content -->
     <div class="container">
 
         <div class="row">
@@ -85,8 +77,8 @@
 </div>
                 <div class="col-md-8">
               <dd><a href="https://scholar.google.com/citations?user=fTQB48cAAAAJ">Google Scholar</a></dd> 
-              <dd><a href="https://dblp.org/pid/298/9320.html?view=by-year">DBLP</a></dd>
               <dd><a href="https://de.linkedin.com/in/julius-hermelink-4a91a2156">LinkedIn</a></dd>
+              <dd><a href="https://dblp.org/pid/298/9320.html?view=by-year">DBLP</a></dd>
 </div>
             </div>
             
