--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
             <div class="col-md-4" style="margin-top: 2%">
                 <div class="col-md-8">
-                <h2>Julius Hermelink</b></h2><br>
+                <h2>Julius Hermelink</h2><br>
                 <p><b>julius.hermelink@mpi-sp.org</b><br>
                 Max-Planck-Institute for Security and Privacy<br>
                 Universitätsstraße 140<br>
@@ -91,7 +91,7 @@
                 <ul>
                             <li class="paper" words="Kyber, ML-KEM, FO-Transform, Side-Channel Analysis, Chosen-Ciphertext Attack">
                             Julius Hermelink, Kai-Chun Ning, Richard Petri, Emanuele Strieder.
-                            <a href="">The Insecurity of Masked Comparisons: SCAs on ML-KEM’s FO-Transform.</a>
+                            <a href="#">The Insecurity of Masked Comparisons: SCAs on ML-KEM’s FO-Transform.</a>
                             <i>Accepted at ACM CCS 2024.</i>
                         </li>
                 </ul>
@@ -157,16 +157,13 @@
                         <li>
                      Side-Channel and Fault Attacks in Modern Lattice-Based Cryptography. <i>Supervisor: Prof. Dr. Gabi Dreo.</i>
 </li>
-                </ul>
-                <ul>
                         <li>
                      Identifying Frobenius elements and calculating Galois Gauss sums. <i>Supervisor: Prof. Dr. Werner Bley.</i>
 </li>
-                </ul>
-                <ul>
                         <li>
                         Klassifikation Quadratischer Formen über den rationalen Zahlen. <i>Supervisor: Prof. Dr. Andreas Rosenschon.</i>
 </li>
+                            </ul>
             </div>
                     </div>
 
