--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
     <script src=
     "./bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
 </head>
+
 <body>
-    <nav class=
-    "navbar navbar-expand-md navbar-inverse bg-dark navbar-dark"
-    style="width: 100 vw">
+    <nav class="navbar navbar-expand-md navbar-inverse bg-dark navbar-dark" style="width: 100 vw">
         <div class="container">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item-active">
@@ -46,8 +48,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8">
-                <img class="img-fluid" src="photo.jpg" style=
-                "width: 100vw; margin-top:3%" alt=""><br>
+                <img class="img-fluid" src="photo.jpg" style="width: 100vw; margin-top:3%" alt=""><br>
                 <div style="margin-top:3%; text-align:justify;">
                     <p>I'm a postdoc in the cryptographic
                     engineering group led by Peter Schwabe at
