--- a/index.html
+++ b/index.html
@@ -106,6 +106,13 @@
                 <div style="margin-top:2%">
                     <ul>
                         <li class="paper" words=
+                        "Lattice-based cryptography, Lattice Reduction, ML-KEM, Belief Propagation, Side-Channel Attacks, Kyber">
+                        Julius Hermelink, Silvan Streit, Erik Mårtensson, Richard Petri
+                        <a href="https://eprint.iacr.org/2024/1211">A Generic Framework for Side-Channel Attacks against LWE-based Cryptosystems.</a> <i>Preprint.</i>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li class="paper" words=
                         "Kyber, ML-KEM, FO-Transform, Side-Channel Analysis, Chosen-Ciphertext Attack">
                         Julius Hermelink, Kai-Chun Ning, Richard
                         Petri, Emanuele Strieder. <a href="#">The
@@ -196,6 +203,11 @@
                 <h2 id="program">Program Committees</h2>
                 <div style="margin-top:2%">
                     <ul>
+                        <li class="pc">
+                            <a href=
+                            "https://fordaysec.de/veranstaltung/acns-2025">
+                            ACNS 2025</a>
+                        </li>
                         <li class="pc">
                             <a href=
                             "https://simula-uib.com/arcticcrypt2025/">
