--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <ul>
                         <li class="paper" words=
                         "Lattice-based cryptography, Lattice Reduction, ML-KEM, Belief Propagation, Side-Channel Attacks, Kyber">
-                        Julius Hermelink, Silvan Streit, Erik Mårtensson, Richard Petri
+                        Julius Hermelink, Silvan Streit, Erik Mårtensson, Richard Petri.
                         <a href="https://eprint.iacr.org/2024/1211">A Generic Framework for Side-Channel Attacks against LWE-based Cryptosystems.</a> <i>Preprint.</i>
                         </li>
                     </ul>
@@ -205,7 +205,7 @@
                     <ul>
                         <li class="pc">
                             <a href=
-                            "https://fordaysec.de/veranstaltung/acns-2025">
+                            "http://acns2025.fordaysec.de/">
                             ACNS 2025</a>
                         </li>
                         <li class="pc">
