Add CT-RSA and tags

--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 <head>
     <title>Julius Hermelink</title>
     <meta charset="utf-8">
-    <meta name="viewport" content=
-    "width=device-width, initial-scale=1">
-    <link rel="stylesheet" href=
-    "./bootstrap-5.0.2-dist/css/bootstrap.min.css">
-    <script src=
-    "./bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="description" content="Julius Hermelink is a Postoc in the Cryptographic Engineering group led by Peter Schwabe at MPI-SP.">
+    <meta name="title" content="Julius Hermelink">
+    <meta property="og:title" content="Julius Hermelink -- Postdoc in Post-Quantum Cryptography" />
+    <meta property="og:url" content="https://juliusjh.github.io/index.html" />
+    <meta property="og:description" content="Julius Hermelink is a Postoc in the Cryptographic Engineering group led by Peter Schwabe at MPI-SP."/>
+    <meta property="og:image" content="https://juliusjh.github.io/photo.jpg"/>
+    <link rel="canonical" href="https://juliusjh.github.io/index.html">
+
+    <link rel="stylesheet" href="./bootstrap-5.0.2-dist/css/bootstrap.min.css">
+    <script src="./bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -203,6 +209,11 @@
                 <h2 id="program">Program Committees</h2>
                 <div style="margin-top:2%">
                     <ul>
+                        <li class="pc">
+                            <a href=
+                            "https://ct-rsa-2025.csa.iisc.ac.in/">
+                            CT-RSA 2025</a>
+                        </li>
                         <li class="pc">
                             <a href=
                             "http://acns2025.fordaysec.de/">
