--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="description" content="Julius Hermelink is a Postoc in the Cryptographic Engineering group led by Peter Schwabe at MPI-SP.">
+    <meta name="description" content="Julius Hermelink is a postdoc in the Cryptographic Engineering group led by Peter Schwabe at MPI-SP.">
     <meta name="title" content="Julius Hermelink">
     <meta property="og:title" content="Julius Hermelink -- Postdoc in Post-Quantum Cryptography" />
     <meta property="og:url" content="https://juliusjh.github.io/index.html" />
