--- a/index.html
+++ b/index.html
@@ -211,6 +211,11 @@
                     <ul>
                         <li class="pc">
                             <a href=
+                            "https://pqcrypto2025.iis.sinica.edu.tw/callforpapers.php">
+                            PQCrypto 2025</a>
+                        </li>
+                        <li class="pc">
+                            <a href=
                             "https://ct-rsa-2025.csa.iisc.ac.in/">
                             CT-RSA 2025</a>
                         </li>
