--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <li class="paper" words=
                         "Lattice-based cryptography, Lattice Reduction, ML-KEM, Belief Propagation, Side-Channel Attacks, Kyber">
                         Julius Hermelink, Silvan Streit, Erik Mårtensson, Richard Petri.
-                        <a href="https://eprint.iacr.org/2024/1211">A Generic Framework for Side-Channel Attacks against LWE-based Cryptosystems.</a> <i>Preprint.</i>
+                        <a href="https://eprint.iacr.org/2024/1211">A Generic Framework for Side-Channel Attacks against LWE-based Cryptosystems.</a> <i>Accepted at Eurocrypt 2025.</i>
                         </li>
                     </ul>
                     <ul>
