--- a/index.html
+++ b/index.html
@@ -121,10 +121,9 @@
                         <li class="paper" words=
                         "Kyber, ML-KEM, FO-Transform, Side-Channel Analysis, Chosen-Ciphertext Attack">
                         Julius Hermelink, Kai-Chun Ning, Richard
-                        Petri, Emanuele Strieder. <a href="#">The
+                        Petri, Emanuele Strieder. <a href="https://doi.org/10.1145/3658644.3690339">The
                         Insecurity of Masked Comparisons: SCAs on
-                        ML-KEM’s FO-Transform.</a> <i>Accepted at
-                        ACM CCS 2024.</i>
+                        ML-KEM’s FO-Transform.</a> <i>In: ACM CCS 2024. pp. 2430–2444. ACM Press (Oct 2024).</i>
                         </li>
                     </ul>
                     <ul>
