--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         Julius Hermelink, Kai-Chun Ning, Richard
                         Petri, Emanuele Strieder. <a href="https://doi.org/10.1145/3658644.3690339">The
                         Insecurity of Masked Comparisons: SCAs on
-                        ML-KEM’s FO-Transform.</a> <i>In: ACM CCS 2024. pp. 2430–2444. ACM Press (Oct 2024).</i>
+                        ML-KEM’s FO-Transform.</a> <i>In: ACM CCS 2024. ACM Press (Oct 2024). pp. 2430–2444.</i>
                         </li>
                     </ul>
                     <ul>
