--- a/index.html
+++ b/index.html
@@ -112,6 +112,13 @@
                 <div style="margin-top:2%">
                     <ul>
                         <li class="paper" words=
+                        "Lattice-based cryptography, Lattice Reduction, ML-DSA, Belief Propagation, Side-Channel Attacks, Dilithum, Information Theory">
+                        Julius Hermelink, Kai-Chun Ning, Richard Petri.
+                        <a href="https://eprint.iacr.org/2025/276">Finding and Protecting the Weakest Link: On Side-Channel Attacks on Masked ML-DSA.</a> <i>Preprint.</i>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li class="paper" words=
                         "Lattice-based cryptography, Lattice Reduction, ML-KEM, Belief Propagation, Side-Channel Attacks, Kyber">
                         Julius Hermelink, Silvan Streit, Erik Mårtensson, Richard Petri.
                         <a href="https://eprint.iacr.org/2024/1211">A Generic Framework for Side-Channel Attacks against LWE-based Cryptosystems.</a> <i>Accepted at Eurocrypt 2025.</i>
