--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <li class="paper" words=
                         "Lattice-based cryptography, Lattice Reduction, ML-DSA, Belief Propagation, Side-Channel Attacks, Dilithum, Information Theory">
                         Julius Hermelink, Kai-Chun Ning, Richard Petri.
-                        <a href="https://eprint.iacr.org/2025/276">Finding and Protecting the Weakest Link: On Side-Channel Attacks on Masked ML-DSA.</a> <i>Preprint.</i>
+                        <a href="https://eprint.iacr.org/2025/276">Finding and Protecting the Weakest Link: On Side-Channel Attacks on Masked ML-DSA.</a> <i>Accepted at Crypto 2025.</i>
                         </li>
                     </ul>
                     <ul>
