--- a/index.html
+++ b/index.html
@@ -112,9 +112,16 @@
                 <div style="margin-top:2%">
                     <ul>
                         <li class="paper" words=
+                        "Lattice-based cryptography, Side-Channel Attacks, Information Theory">
+                        Dina Hesse, Jakob Feldtkeller, Tim Güneysu, Julius Hermelink, Georg Land, Markus Krausz, Jan Richter-Brockmann.
+                        <a href="https://eprint.iacr.org/2025/1202.pdf">t-Probing (In-) Security-Pitfalls on Noise Assumptions.</a> <i>Preprint.</i>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li class="paper" words=
                         "Lattice-based cryptography, Lattice Reduction, ML-DSA, Belief Propagation, Side-Channel Attacks, Dilithum, Information Theory">
                         Julius Hermelink, Kai-Chun Ning, Richard Petri.
-                        <a href="https://eprint.iacr.org/2025/276">Finding and Protecting the Weakest Link: On Side-Channel Attacks on Masked ML-DSA.</a> <i>Accepted at Crypto 2025.</i>
+                        <a href="https://eprint.iacr.org/2025/276">Finding and Protecting the Weakest Link: On Side-Channel Attacks on y in Masked ML-DSA.</a> <i>Accepted at Crypto 2025.</i>
                         </li>
                     </ul>
                     <ul>
@@ -212,9 +219,15 @@
                 </div>
             </div>
             <div class="col-md-8" style="margin-top: 2%">
-                <h2 id="program">Program Committees</h2>
+                <h2 id="program">Academic Services</h2>
+                <h3>Program Committees</h3>
                 <div style="margin-top:2%">
                     <ul>
+                        <li class="pc">
+                            <a href=
+                            "https://ches.iacr.org/2026/callforpapers.php">
+                            TCHES 2026</a>
+                        </li>
                         <li class="pc">
                             <a href=
                             "https://pqcrypto2025.iis.sinica.edu.tw/callforpapers.php">
@@ -244,6 +257,26 @@
                             <a href=
                             "https://ches.iacr.org/2024/callforpapers.php">
                             TCHES 2024 (Issues 2-4)</a>
+                        </li>
+                    </ul>
+                </div>
+                <h3>(Sub-)Reviews</h3>
+                <div style="margin-top:2%">
+                    <ul>
+                        <li class="review">
+                        Asiacrypt 2025
+                        </li>
+                        <li class="review">
+                        Crypto 2025
+                        </li>
+                        <li class="review">
+                        Eurocrypt 2024
+                        </li>
+                        <li class="review">
+                         Transactions on Computers
+                        </li>
+                        <li class="review">
+                        EURASIP
                         </li>
                     </ul>
                 </div>
