--- a/index.html
+++ b/index.html
@@ -127,79 +127,37 @@
                     <ul>
                         <li class="paper" words=
                         "Lattice-based cryptography, Lattice Reduction, ML-KEM, Belief Propagation, Side-Channel Attacks, Kyber">
-                        Julius Hermelink, Silvan Streit, Erik Mårtensson, Richard Petri.
-                        <a href="https://eprint.iacr.org/2024/1211">A Generic Framework for Side-Channel Attacks against LWE-based Cryptosystems.</a> <i>Accepted at Eurocrypt 2025.</i>
+                Julius Hermelink, Silvan Streit, Erik Mårtensson, and Richard Petri. <a href="https://eprint.iacr.org/2024/1211">A Generic Framework for Side-Channel Attacks Against LWE-Based Cryptosystems</a>. In: Advances in Cryptology – EUROCRYPT 2025, Part VIII. ed. by Serge Fehr and Pierre-Alain Fouque. Vol. 15608. Lecture Notes in Computer Science. Madrid, Spain: Springer, Cham, Switzerland, May 2025, pp. 3–32.
                         </li>
                     </ul>
                     <ul>
                         <li class="paper" words=
                         "Kyber, ML-KEM, FO-Transform, Side-Channel Analysis, Chosen-Ciphertext Attack">
-                        Julius Hermelink, Kai-Chun Ning, Richard
-                        Petri, Emanuele Strieder. <a href="https://doi.org/10.1145/3658644.3690339">The
-                        Insecurity of Masked Comparisons: SCAs on
-                        ML-KEM’s FO-Transform.</a> <i>In: ACM CCS 2024. ACM Press (Oct 2024). pp. 2430–2444.</i>
+                Julius Hermelink, Kai-Chun Ning, Richard Petri, and Emanuele Strieder. <a href="https://doi.org/10.1145/3658644.3690339">The Insecurity of Masked Comparisons: SCAs on ML-KEM’s FO-Transform</a>. In: ACM CCS 2024: 31st Conference on Computer and Communications Security. Ed. by Bo Luo, Xiaojing Liao, Jun Xu, Engin Kirda, and David Lie. Salt Lake City, UT, USA: ACM Press, Oct. 2024, pp. 2430–2444.
                         </li>
                     </ul>
                     <ul>
                         <li class="paper" words=
                         "Kyber, ML-KEM, Belief Propagation, Side-Channel Analysis, Lattice-Reduction">
-                        Julius Hermelink, Erik Mårtensson, Simona
-                        Samardjiska, Peter Pessl, Gabi Dreo
-                        Rodosek. <a href=
-                        "https://doi.org/10.46586/tches.v2023.i4.287-317">
-                            Belief propagation meets lattice
-                            reduction: Security estimates for
-                            error-tolerant key recovery from
-                            decryption errors.</a> <i>In: IACR
-                            Transactions on Cryptographic Hardware
-                            and Embedded Systems 2023.4 (2023), pp.
-                            287–317.</i>
+                Julius Hermelink, Erik Mårtensson, Simona Samardjiska, Peter Pessl, and Gabi Dreo Rodosek. <a href="https://doi.org/10.46586/tches.v2023.i4.287-317">Belief Propagation Meets Lattice Reduction: Security Estimates for Error-Tolerant Key Recovery from Decryption Errors</a>. In: IACR Transactions on Cryptographic Hardware and Embedded Systems 2023.4 (2023), pp. 287–317. 
                         </li>
                     </ul>
                     <ul>
                         <li class="paper" words=
                         "Kyber, ML-KEM, Belief Propagation, Side-Channel Analysis, Countermeasures, Chosen-Ciphertext Attack">
-                        Julius Hermelink, Silvan Streit, Emanuele
-                        Strieder, Katharina Thieme. <a href=
-                        "https://doi.org/10.46586/tches.v2023.i1.60-88">
-                            Adapting Belief Propagation to Counter
-                            Shuffling of NTTs.</a> <i>In: IACR
-                            Transactions on Cryptographic Hardware
-                            and Embedded Systems 2023.1 (2023), pp.
-                            60-88.</i>
+                Julius Hermelink, Silvan Streit, Emanuele Strieder, and Katharina Thieme. <a href="https://doi.org/10.46586/tches.v2023.i1.60-88">Adapting Belief Propagation to Counter Shuffling of NTTs</a>. In: IACR Transactions on Cryptographic Hardware and Embedded Systems 2023.1 (2023), pp. 60–88.
                         </li>
                     </ul>
                     <ul>
                         <li class="paper" words=
                         "Kyber, ML-KEM, Belief Propagation, Fault Attack, Chosen-Ciphertext Attack">
-                        Julius Hermelink, Peter Pessl, Thomas
-                        Pöppelmann. <a href=
-                        "https://doi.org/10.1007/978-3-030-92518-5_15">
-                            Fault-Enabled Chosen-Ciphertext Attacks
-                            on Kyber.</a> <i>In: Progress in
-                            Cryptology - INDOCRYPT 2021 - 22nd
-                            International Conference on Cryptology
-                            in India, Jaipur, India, December 12-15
-                            , 2021, Proceedings. Ed. by Avishek
-                            Adhikari, Ralf Küsters, and Bart
-                            Preneel. Vol. 13143. Lecture Notes in
-                            Computer Science. Springer, 2021, pp.
-                            311–334.</i>
+Julius Hermelink, Peter Pessl, and Thomas Pöppelmann. <a href="https://doi.org/10.1007/978-3-030-92518-5_15">Fault-Enabled Chosen-Ciphertext Attacks on Kyber</a>. In: Progress in Cryptology - INDOCRYPT 2021 - 22nd International Conference on Cryptology in India, Jaipur, India, December 12-15, 2021, Proceedings. Ed. by Avishek Adhikari, Ralf Küsters, and Bart Preneel. Vol. 13143. Lecture Notes in Computer Science. Springer, 2021, pp. 311–334.
                         </li>
                     </ul>
                     <ul>
                         <li class="paper" words=
                         "Kyber, ML-KEM, Belief Propagation, Fault Attack, Chosen-Ciphertext Attack">
-                        Mike Hamburg, Julius Hermelink, Robert
-                        Primas, Simona Samardjiska, Thomas
-                        Schamberger, Silvan Streit, Emanuele
-                        Strieder, Christine van Vredendaal
-                            <a href="https://doi.org/10.46586/tches.v2021.i4.88-113">
-                            Chosen ciphertext k-trace attacks on
-                            masked CCA2 secure Kyber.</a> <i>In:
-                            IACR Transactions on Cryptographic
-                            Hardware and Embedded Systems 2021.4
-                            (2021), pp. 88-113.</i>
+Mike Hamburg, Julius Hermelink, Robert Primas, Simona Samardjiska, Thomas Schamberger, Silvan Streit, Emanuele Strieder, and Christine van Vredendaal. <a href="https://doi.org/10.46586/tches.v2021.i4.88-113">Chosen Ciphertext k-Trace Attacks on Masked CCA2 Secure Kyber</a>. In: IACR Transactions on Cryptographic Hardware and Embedded Systems 2021.4 (2021), pp. 88–113. issn: 2569-2925. 
                         </li>
                     </ul>
                     <ul>
@@ -213,7 +171,7 @@
                             application.</a> <i>In: 18-th escar
                             Europe : The World’s Leading Automotive
                             Cyber Security Conference
-                            (Konferenzveröffentlichung). 2020</i>
+                            (Konferenzveröffentlichung). 2020.</i>
                         </li>
                     </ul>
                 </div>
