--- a/index.html
+++ b/index.html
@@ -112,6 +112,12 @@
                 <div style="margin-top:2%">
                     <ul>
                         <li class="paper" words=
+                        "Lattice-based cryptography, Side-Channel Attacks, Information Theory, SASCA">
+                        Julius Hermelink, Erik Mårtensson, Maggie Tran. <a href=https://eprint.iacr.org/2025/1496.pdf>Noise-Tolerant Plaintext-Checking Oracle Attacks -- A Soft-Analytic Approach Applied to ML-KEM.</a> <i>Preprint</i>.
+                        </li>
+                    </ul>
+                    <ul>
+                        <li class="paper" words=
                         "Lattice-based cryptography, Side-Channel Attacks, Information Theory">
                         Dina Hesse, Jakob Feldtkeller, Tim Güneysu, Julius Hermelink, Georg Land, Markus Krausz, Jan Richter-Brockmann.
                         <a href="https://eprint.iacr.org/2025/1202.pdf">t-Probing (In-) Security-Pitfalls on Noise Assumptions.</a> <i>Preprint.</i>
