--- a/index.html
+++ b/index.html
@@ -112,6 +112,12 @@
                 <div style="margin-top:2%">
                     <ul>
                         <li class="paper" words=
+                        "Code-based cryptography, Side-Channel Attacks">
+                        Zhenzhi Lai, Ruiyi Zhang, Zhiyuan Zhang, Julius Hermelink, Michael Schwarz, Van-Thuan Pham, and Udaya Parampalli. <a href=https://eprint.iacr.org/2025/2162.pdf>You Only Decapsulate Once: Ciphertext-Independent Single-Trace Passive Side-Channel Attacks on HQC.</a> <i>Preprint</i>.
+                        </li>
+                    </ul>
+                    <ul>
+                        <li class="paper" words=
                         "Lattice-based cryptography, Side-Channel Attacks, Information Theory, SASCA">
                         Julius Hermelink, Erik Mårtensson, Maggie Tran. <a href=https://eprint.iacr.org/2025/1496.pdf>Noise-Tolerant Plaintext-Checking Oracle Attacks -- A Soft-Analytic Approach Applied to ML-KEM.</a> <i>Preprint</i>.
                         </li>
@@ -191,6 +197,16 @@ Mike Hamburg, Julius Hermelink, Robert Primas, Simona Samardjiska, Thomas Schamb
                             <a href=
                             "https://ches.iacr.org/2026/callforpapers.php">
                             TCHES 2026</a>
+                        </li>
+                        <li class="pc">
+                            <a href=
+                            "https://acns2026.github.io/tpc.html">
+                            ACNS 2025</a>
+                        </li>
+                        <li class="pc">
+                            <a href=
+                            "https://pqcrypto2026.irisa.fr/callforpapers.html">
+                            PQCrypto 2026</a>
                         </li>
                         <li class="pc">
                             <a href=
